# Ehyaioess

./: Cargo.toml  README.md  bevy.code-workspace  helpful.md
ehyaioess/: package-lock.json  package.json  tsconfig.json
ehyaioess/dist-isolation/: index.html  index.js
ehyaioess/src/: App.svelte
ehyaioess/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.conf.json5
ehyaioess/src-tauri/src/: commands.rs  config.rs  events.rs  main.rs  models.rs  payloads.rs  stuff.rs
ehyaioess/src/lib/: Conversation.svelte  ConversationHistory.svelte  ConversationList.svelte  ConversationPanel.svelte  FilePicker.svelte  FlexTest.svelte  NoConversationPlaceholder.svelte  TabLayout.svelte  bindings.ts  models.ts  state.ts
ehyaioess/src/lib/bindings/: ConversationMessageAddedEventPayload.ts  ConversationMessagePayload.ts  ConversationTitleChangedEventPayload.ts  tauri_commands.d.ts
examples/: screencap.rs
src/: main.rs
